// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utility.parseLines should handle multi-line comments 1`] = `
Array [
  Object {
    "codeText": "",
    "docText": "This is the first line of a multi-line comment
This is the second line of a multi-line comment
This is the third line of a multi-line comment
",
  },
]
`;

exports[`utility.parseLines should handle multiple comments and lines of code 1`] = `
Array [
  Object {
    "codeText": "console.log(\\"abc\\");",
    "docText": "todo1
todo2",
  },
  Object {
    "codeText": "console.log(\\"def\\");",
    "docText": "todo3
todo4",
  },
]
`;

exports[`utility.parseLines should handle multiple comments before one line of code 1`] = `
Array [
  Object {
    "codeText": "console.log(\\"abc\\");",
    "docText": "todo1
todo2",
  },
]
`;

exports[`utility.parseLines should handle one comment before one line of code 1`] = `
Array [
  Object {
    "codeText": "console.log(\\"abc\\");",
    "docText": "todo1",
  },
]
`;

exports[`utility.parseLines should handle single-line comments using /* */ 1`] = `
Array [
  Object {
    "codeText": "",
    "docText": "This is a single line of single-line comment",
  },
]
`;

exports[`utility.parseLines should parse multiple lines of code 1`] = `
Array [
  Object {
    "codeText": "console.log(\\"abc\\");",
    "docText": "",
  },
  Object {
    "codeText": "console.log(\\"def\\");",
    "docText": "",
  },
]
`;

exports[`utility.parseLines should parse multiple lines of comments 1`] = `
Array [
  Object {
    "codeText": "",
    "docText": "todo1
todo2",
  },
]
`;

exports[`utility.parseLines should parse one line of code 1`] = `
Array [
  Object {
    "codeText": "console.log(\\"abc\\");",
    "docText": "",
  },
]
`;

exports[`utility.parseLines should parse one line of comments 1`] = `
Array [
  Object {
    "codeText": "",
    "docText": "todo1",
  },
]
`;
